# ai-bisnis

./: .env.example  .gitignore  Buka AI Bisnis.vbs  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRASI_BOTNESIA.py  LICENSE  META_OAUTH_SETUP.md  MultiAgent_AI_Framework.html  MultiAgent_AI_Framework.md  MultiAgent_App_Integration.html  MultiAgent_App_Integration.md  MultiAgent_Code_Templates.py  MultiAgent_Index.html  MultiAgent_Quick_Start.html  MultiAgent_Quick_Start.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  action_executor.py  activate_all_bots.cmd  agent_api.py  agent_memory_store.py  agent_observability.py  agent_os.py  agent_registry.py  ai_proof_registry.wasm  analytics.py  anti_hallucination_engine.py  api-docs.html  api.js  audit_logger.py  backup_database.sh  base.py  botnesia_knowledge.py  botnesia_local_agent.py  build_multiagent_docs.py  (+302 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
ai_providers/: __init__.py  base.py  deepseek.py  gemini.py  groq_provider.py  openrouter.py  router.py  types.py
archive/: README.md  activate_all_bots.py
bn_platform/: ARCHITECTURE.md  __init__.py  action_executor_router.py  agent_center.py  agent_marketplace_catalog.py  agent_selftest.py  agent_toggles.py  ai_observability.py  ai_power.py  audio.py  auth.py  billing.py  bots.py  casper_engineer_router.py  channel_manager.py  channel_messaging.py  chat.py  chat_stream.py  computer_agent.py  config.py  cost_intelligence.py  documents.py  durable_dispatch.py  finance.py  (+41 more)
casper/contract/: Cargo.toml
casper/contract/src/: main.rs
(+265 files in other folders)
